basic function ready

--- a/src/client/app/components/home/home.component.html
+++ b/src/client/app/components/home/home.component.html
@@ -1,6 +1,8 @@
 <div class="ui-g">
-    <div class="ui-g-3"></div>
-    <div class="ui-g-9">
+    <div class="ui-g-2">
+        <go-directory></go-directory>
+    </div>
+    <div class="ui-g-10">
         <go-board></go-board>
     </div>
 </div>
