--- a/src/client/app/shared/go/components/board.component.css
+++ b/src/client/app/shared/go/components/board.component.css
@@ -26,3 +26,8 @@
     font: 200px Verdana, Helvetica, Arial, sans-serif;
     fill: #ff0000
 }
+
+.text-markup {
+    font: 600px Verdana, Helvetica, Arial, sans-serif;
+    fill: #ff0000
+}
