--- a/src/client/app/shared/go/components/board.component.html
+++ b/src/client/app/shared/go/components/board.component.html
@@ -1,23 +1,25 @@
+<p-messages [value]="msgs$ | async" [closable]="false"></p-messages>
+
 <svg xmlns="http://www.w3.org/2000/svg/" [attr.width]="700" [attr.height]="700" [attr.viewBox]="'0 0 '+(dim*500+1250)+' '+(dim*500+1250)" class="img-responsive">  
       
     <svg xmlns="http://www.w3.org/2000/svg/" x="625" y="0">
-        <text class="text-coordinate" *ngFor="let row of grid; let k = index" [attr.x]="500*k+250" y="250" text-anchor="middle" alignment-baseline="central">
-            {{num2letter(k+1)}}
+        <text class="text-coordinate" *ngFor="let row of staticGrid; let k = index" [attr.x]="500*k+250" y="250" text-anchor="middle" alignment-baseline="central">
+            {{coordinates[k]}}
         </text>    
     </svg>
 <svg xmlns="http://www.w3.org/2000/svg/" x="0" y="625">
-        <text class="text-coordinate" *ngFor="let row of grid; let k = index" x="250" [attr.y]="500*k+250" text-anchor="middle" alignment-baseline="central">
-            {{dim-k}}
+        <text class="text-coordinate" *ngFor="let row of staticGrid; let k = index" x="250" [attr.y]="500*k+250" text-anchor="middle" alignment-baseline="central">
+            {{coordinates[k]}}
         </text>    
     </svg>
 <svg xmlns="http://www.w3.org/2000/svg/" x="625" [attr.y]="dim*500+750">
-        <text class="text-coordinate" *ngFor="let row of grid; let k = index" [attr.x]="500*k+250" y="250" text-anchor="middle" alignment-baseline="central">
-            {{num2letter(k+1)}}
+        <text class="text-coordinate" *ngFor="let row of staticGrid; let k = index" [attr.x]="500*k+250" y="250" text-anchor="middle" alignment-baseline="central">
+            {{coordinates[k]}}
         </text>    
     </svg>
 <svg xmlns="http://www.w3.org/2000/svg/" [attr.x]="dim*500+750" y="625">
-        <text class="text-coordinate" *ngFor="let row of grid; let k = index" x="250" [attr.y]="500*k+250" text-anchor="middle" alignment-baseline="central">
-            {{dim-k}}
+        <text class="text-coordinate" *ngFor="let row of staticGrid; let k = index" x="250" [attr.y]="500*k+250" text-anchor="middle" alignment-baseline="central">
+            {{coordinates[k]}}
         </text>    
     </svg>
 
@@ -27,7 +29,24 @@
         <path *ngFor="let line of lines" stroke="#000" stroke-width="20"  [attr.d]="'M240,'+line.a+'H'+line.b"/>
         <path *ngFor="let line of lines" stroke="#000" stroke-width="20"  [attr.d]="'M'+line.a+',240V'+line.b"/>
         <circle *ngFor="let star of stars" [attr.cx]="star.x" [attr.cy]="star.y" r="50"/>
+        <text class="text-markup empty-black" *ngFor="let markup of textMarkups$ | async" [attr.x]="markup.x*500 + 250" [attr.y]="500*markup.y +250" text-anchor="middle" alignment-baseline="central">
+            {{markup.text}}
+        </text>
+
+        <polygon *ngFor="let markup of trMarkups$ | async" [attr.points]="getTrianglePoints(markup)" style="fill:transparent;stroke:red;stroke-width:20" />
+        <svg xmlns="http://www.w3.org/2000/svg" *ngFor="let row of grid$ | async; let i = index" [attr.x]="i*500">
+            <svg xmlns="http://www.w3.org/2000/svg" *ngFor="let cur of row; let j = index" width="500" height="500" [attr.y]="j*500" [ngSwitch]="cur">
+                <circle *ngSwitchCase="1" class="black" cx="250" cy="250" r="245" fill="url(#black)"/>
+                <circle *ngSwitchCase="-1" class="white" cx="250" cy="250" r="245" fill="url(#white)"/>
+                <circle *ngSwitchCase="0"  class="empty-black" cx="250" cy="250" r="245" fill-opacity="0" (click)="onClick(i, j)"/>
+            </svg>
 </svg>
+
+
+<!--<text class="text-markup" *ngFor="let markup of trMarkups" [attr.x]="markup.x*500 + 250" [attr.y]="500*markup.y +250" text-anchor="middle" alignment-baseline="central">
+            {{markup.type}}
+        </text>-->
+
 
 <defs>
     <filter id="boardShadow" x="0" y="0" width="200%" height="200%">
@@ -35,6 +54,20 @@
         <feGaussianBlur result="blurOut" in="offOut" stdDeviation="25" />
         <feBlend in="SourceGraphic" in2="blurOut" mode="normal" />
     </filter>
+</defs>
+<defs>
+    <radialGradient id="black" cx=".3" cy=".3" r=".8">
+        <stop offset="0" stop-color="#777" />
+        <stop offset=".3" stop-color="#222" />
+        <stop offset="1" stop-color="#000" />
+    </radialGradient>
+</defs>
+<defs>
+    <radialGradient id="white" cx=".47" cy=".49" r=".48">
+        <stop offset=".7" stop-color="#FFF" />
+        <stop offset=".9" stop-color="#DDD" />
+        <stop offset="1" stop-color="#777" />
+    </radialGradient>
 </defs>
 
 </svg>
