--- a/src/client/app/shared/go/components/board.component.html
+++ b/src/client/app/shared/go/components/board.component.html
@@ -38,7 +38,10 @@
             <svg xmlns="http://www.w3.org/2000/svg" *ngFor="let cur of row; let j = index" width="500" height="500" [attr.y]="j*500" [ngSwitch]="cur">
                 <circle *ngSwitchCase="1" class="black" cx="250" cy="250" r="245" fill="url(#black)"/>
                 <circle *ngSwitchCase="-1" class="white" cx="250" cy="250" r="245" fill="url(#white)"/>
-                <circle *ngSwitchCase="0"  class="empty-black" cx="250" cy="250" r="245" fill-opacity="0" (click)="onClick(i, j)"/>
+                <template [ngSwitchCase]="0">
+                  <circle *ngIf = "enabled" class="empty-black" cx="250" cy="250" r="245" fill-opacity="0" (click)="onClick(i, j)"/>
+                </template>
+                
             </svg>
 </svg>
 
