--- a/src/client/app/components/home/home.component.html
+++ b/src/client/app/components/home/home.component.html
@@ -1,8 +1,14 @@
-<div class="ui-g">
-    <div class="ui-g-2">
-        <go-directory></go-directory>
-    </div>
-    <div class="ui-g-10">
+<!--<div class="ui-g">
+    <div class="ui-g-6">
         <go-board></go-board>
     </div>
+    <div class="ui-g-6">
+        <go-control></go-control>
+    </div>
+</div>-->
+
+<div class="main">
+    <go-control class="control"></go-control>
+    <go-board class="board"></go-board>
+
 </div>
