--- a/src/client/app/components/home/home.component.scss
+++ b/src/client/app/components/home/home.component.scss
@@ -3,26 +3,6 @@
     padding: 0 16px;
 }
 
-input {
-    width: 250px;
-}
-
-ul {
-    list-style-type: none;
-    padding: 0 0 0 8px;
-}
-
-.smile {
-    background: url("./assets/svg/smile.svg");
-    height: 48px;
-    width: 48px;
-    display: inline-block;
-    transform: scale(0.6);
-    margin-top: -25px;
-    position: relative;
-    top: 16px;
-}
-
 a.link {
     color: #00e;
     cursor: pointer;
@@ -33,23 +13,37 @@ a.link:hover {
     color: #f00;
 }
 
-.main {
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: 3em;
+@media (min-width: 1024px) {
+    .main {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .board {
+        flex: 1;
+        width: 700px;
+        font-size: 16px;
+    }
+    .control {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
 }
 
-.board {
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    flex-grow: 1.2;
-    max-width: 900px;
-    min-width: 400px;
-}
-
-.control {
-    max-width: 150px;
-    flex-grow: 1;
-    margin-left: 2em;
+@media (max-width: 1024px) {
+    .main {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .board {
+        width: 100vw;
+        flex: 1;
+    }
+    .control {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
 }
