--- a/src/client/app/shared/go/components/directory.component.css
+++ b/src/client/app/shared/go/components/directory.component.css
@@ -1,7 +1,7 @@
 .container {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 .item {
