--- a/src/client/app/components/login/login.component.html
+++ b/src/client/app/components/login/login.component.html
@@ -1,8 +1,12 @@
 <div class="login-card">
-    <h1>登陆</h1><br>
+    <h1>围棋练习系统</h1><br>
     <form>
-        <input type="text" name="user" placeholder="用户名">
-        <input type="password" name="pass" placeholder="密码">
+        <input type="text" name="user" placeholder="用户名" [(ngModel)]="username">
+        <input type="password" name="pass" placeholder="密码" [(ngModel)]="password">
         <button type="button" pButton class="login login-submit" label="登陆" (click)="login()"></button>
     </form>
+</div>
+
+<div class="login-help">
+    <label *ngIf="isLoginFailed()">用户名或密码有误</label>
 </div>
