--- a/src/client/app/shared/go/components/board.component.html
+++ b/src/client/app/shared/go/components/board.component.html
@@ -43,7 +43,7 @@
                 <circle *ngSwitchCase="1" class="black" cx="250" cy="250" r="245" fill="url(#black)"/>
                 <circle *ngSwitchCase="-1" class="white" cx="250" cy="250" r="245" fill="url(#white)"/>
                 <template [ngSwitchCase]="0">
-                  <circle *ngIf = "status == 1" class="empty-black" cx="250" cy="250" r="245" fill-opacity="0" (click)="onClick(i, j)"/>
+                  <circle *ngIf = "status == 1" [attr.class]="getStyleClass()" cx="250" cy="250" r="245" fill-opacity="0" (click)="onClick(i, j)"/>
                 </template>
             </svg>
 </svg>
